# vadc

./: .gitignore  0.需求.md  CMakeLists.txt  build.sh  libvadc_api.c  libvadc_api.h  libvadc_frame_api.c  libvadc_frame_api.h  maths.h  memory.h  onnx_helpers.c  onnx_helpers.h  run_vadc.sh  string8.c  string8.h  test_vadc.sh  utils.h  vadc-bk.c  vadc.h  使用方法.md
docs/: LOGGING_FEATURES.md
examples/: test_vadc.c
tools/: diagnose_audio.sh
tracy/: TracyC.h
